Add default constructor for TurbineUserImpl, add tests for retrieveUserList,format tests, use SharedPool2DataSourceFactory in test/Torque.properties, fix retrieveUserList in MemoryUserManagerImpl, add instance check for argument Criteria in retrieveUserList(Object) methods, cleanup test and use non deprecated Integer initializers